# Scenes

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Scenes.sln
.github/workflows/: cmake.yml
docs/: ClassDocs.md  Doxyfile.in  ExampleUseCase.md  Usage.md
include/Scenes/: Event.hpp  EventLog.h  EventLog.hpp  Line.hpp  Log.h  Log.hpp  Reader.hpp  ScriptReader.hpp  Section.h  Section.hpp  Serializations.hpp
src/: CMakeLists.txt  Event.hpp  EventLog.cpp  EventLog.h  Line.cpp  Line.h  Log.cpp  Reader.cpp  Scenes.vcxproj  Scenes.vcxproj.filters  ScriptReader.cpp  ScriptReader.h  Section.cpp  Serializations.cpp  pch.h
src/x64/Debug/Scenes.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Scenes.lastbuildstate
tests/UnitTests/: CMakeLists.txt  EventLogTests.cpp  EventTests.cpp  LogTests.cpp  ScenesTests.vcxproj  ScenesTests.vcxproj.filters  pch.h
tests/UnitTests/x64/Debug/: ScenesTests.dll.recipe  ScenesTests.ilk  vc143.idb
tests/UnitTests/x64/Debug/ScenesTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ScenesTests.lastbuildstate  ScenesTests.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/unittests/: CMakeLists.txt  EventLogTests.cpp  EventTests.cpp  LineTests.cpp  LogTests.cpp  SectionTests.cpp
